# survey-render

./: .gitignore  LICENSE  LRE_gg_generation_common.py  LRE_gg_lens.py  LRE_gg_nonlens.py  NOTICE  README.md  pyproject.toml  requirements.txt  run_hst_100k_production.sh
examples/: run_smoke.sh  run_synthetic_smoke.sh
scripts/: check_environment.py  render_hst_to_surveys.py
survey_render/: __init__.py  cli.py  config.py  filters.py  image_ops.py  writer.py
