[project]
name = "survey-render"
version = "0.1.0"
description = "Direct HST cutout renderer for Euclid, LSST, and Roman survey-like images."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ZHANG7DC", email = "diczhang@cs.stonybrook.edu"}
]
dependencies = [
  "numpy",
  "scipy",
  "astropy",
  "zarr<3",
  "numcodecs",
]

[project.scripts]
render-hst-to-surveys = "survey_render.cli:main"

[tool.ruff]
line-length = 99
